--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_USER: findchat
       POSTGRES_PASSWORD: hfpldfnhb
-    volumes:
+    # volumes:
       - type: bind
         source: ./pgsql/pgdata
         target: /var/lib/postgresql/data
