--- a/nginx/etc/nginx.conf
+++ b/nginx/etc/nginx.conf
@@ -35,9 +35,18 @@ http {
 
     client_max_body_size 11M;
 
-    keepalive_timeout  65;
+    client_body_timeout   360;
+    client_header_timeout 360;
+    keepalive_timeout     360;
+    send_timeout          1200;
+    proxy_read_timeout    1800;
 
     #gzip  on;
+
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
 
     include /etc/nginx/conf.d/*.conf;
 }
