--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -1,9 +1,10 @@
 server {
-    listen       80;
+    listen       443 ssl;
     server_name  localhost;
-    #ssl_certificate /cert/certificate.crt;
-    #ssl_certificate_key /cert/certificate.key;
+    ssl_certificate /cert/certificate.crt;
+    ssl_certificate_key /cert/certificate.key;
 
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     location / {
         proxy_pass_header Server;
@@ -43,4 +44,12 @@ server {
         #expires 30d;
     }
 
+}
+
+
+server {
+	listen 80 default_server;
+	listen [::]:80 default_server;
+	server_name _;
+	return 301 https://$host$request_uri;
 }
