--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -4,6 +4,11 @@ server {
     ssl_certificate /cert/certificate.crt;
     ssl_certificate_key /cert/certificate.key;
 
+    gzip on;
+    gzip_disable "msie6";
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
+    gzip_comp_level 5;
+
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     location / {
