--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -1,8 +1,8 @@
 server {
     listen       443 ssl;
-    server_name  localhost;
-    ssl_certificate /cert/certificate.crt;
-    ssl_certificate_key /cert/certificate.key;
+    server_name  findchat.io;
+    ssl_certificate /cert/fullchain.pem;
+    ssl_certificate_key /cert/privkey.pem;
 
     gzip on;
     gzip_disable "msie6";
@@ -49,8 +49,12 @@ server {
         #expires 30d;
     }
 
-}
+    location ~ ^/favicon.ico {
+        alias /htdocs/static/icon/logo_color.png;
+    }
 
+
+}
 
 server {
 	listen 80 default_server;
