--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -18,9 +18,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Scheme $scheme;
         proxy_pass http://react;
+    }        
     }
 
-    location ~ ^/api_v1 {
+    location ~ ^/(api_v1|auth) {
         rewrite /api_v1(.*) $1 break;
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
