--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -19,9 +19,8 @@ server {
         proxy_set_header X-Scheme $scheme;
         proxy_pass http://react;
     }        
-    }
 
-    location ~ ^/(api_v1|auth) {
+    location ~ ^/(api_v1|auth)/ {
         rewrite /api_v1(.*) $1 break;
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
