--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "react-contenteditable": "^2.0.5",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.1.1",
-    "react-image-crop": "^3.0.7",
+    "react-cropper": "^1.0.1",
     "react-notification-system-redux": "^1.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^3.2.0",
