--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -53,6 +53,10 @@ server {
         alias /htdocs/static/icon/logo_color.png;
     }
 
+    location ~ ^/c47edb6757fa.htm {
+        alias /htdocs/c47edb6757fa.htm;
+    }
+
 
 }
 
