--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -53,9 +53,9 @@ server {
         alias /htdocs/static/icon/logo_color.png;
     }
 
-    location ~ ^/c47edb6757fa.htm {
-        alias /htdocs/c47edb6757fa.htm;
-    }
+    # location / {
+    #     alias /htdocs/;
+    # }
 
 
 }
