--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "array-from": "^2.1.1",
     "classnames": "^2.2.5",
+    "express": "^4.16.2",
     "photoswipe": "^4.1.2",
     "qs": "^6.5.1",
     "react": "^16.1.1",
@@ -17,6 +18,7 @@
     "react-notification-system-redux": "^1.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-scroll-memory": "^1.0.1",
     "react-scripts": "1.0.17",
     "react-select": "^1.0.0",
     "react-svg-inline": "^2.0.1",
@@ -35,6 +37,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "redux-logger": "^3.0.6"
   }
 }
