--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -49,6 +49,11 @@ server {
         #expires 30d;
     }
 
+    location ~ ^/locales/ {
+        root /htdocs/;
+        #expires 30d;
+    }
+
     location ~ ^/favicon.ico {
         alias /htdocs/static/icon/logo_color.png;
     }
