--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,5 +78,19 @@ services:
       - type: bind
         source: ./frontend/src
         target: /app/findchat-react/src
+  #
+  # FINDCHAT EXPRESS FROM SSR
+  #
+  express:
+    image: findchat-express
+    ports:
+      - "5000:80"
+    volumes:
+      - type: bind
+        source: ./express/src
+        target: /app/src
+      - type: bind
+        source: ./frontend/src/
+        target: /app/frontend
 networks:
   webnet:
