--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "array-from": "^2.1.1",
     "classnames": "^2.2.5",
+    "i18next-xhr-backend": "^1.5.1",
     "express": "^4.16.2",
     "photoswipe": "^4.1.2",
     "qs": "^6.5.1",
     "react": "^16.1.1",
+    "i18next": "^10.2.2",
+    "i18next-browser-languagedetector": "^2.1.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^0.31.5",
     "react-contenteditable": "^2.0.5",
@@ -18,6 +21,7 @@
     "react-notification-system-redux": "^1.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-i18next": "^7.3.0",
     "react-router-scroll-memory": "^1.0.1",
     "react-scripts": "1.0.17",
     "react-select": "^1.0.0",
