--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -44,7 +44,7 @@ server {
         proxy_set_header Connection "upgrade";
     }
 
-    location ~ ^/(img|svg|css)/ {
+    location ~ ^/(img|svg|css|js|icon)/ {
         root /htdocs/static;
         #expires 30d;
     }
@@ -55,7 +55,7 @@ server {
     }
 
     location ~ ^/favicon.ico {
-        alias /htdocs/static/icon/logo_color.png;
+        alias /htdocs/static/icon/logo-32x32.png;
     }
 
     # location / {
