--- a/express/package.json
+++ b/express/package.json
@@ -6,20 +6,53 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "nodemon src/index.js --exec babel-node --presets es2015,stage-2 --plugins transform-react-jsx"
+    "start": "nodemon src/index.js --exec babel-node --presets es2015,stage-2 --plugins transform-react-jsx,css-modules-transform"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "array-from": "^2.1.1",
+    "classnames": "^2.2.5",
+    "i18next-xhr-backend": "^1.5.1",
+    "photoswipe": "^4.1.2",
+    "qs": "^6.5.1",
+    "react": "^16.1.1",
+    "i18next": "^10.2.2",
+    "i18next-browser-languagedetector": "^2.1.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^0.31.5",
+    "react-contenteditable": "^2.0.5",
+    "react-cropper": "^1.0.1",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-dom": "^16.1.1",
+    "pug": "^2.0.0-rc.4",
+    "react-notification-system-redux": "^1.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-i18next": "^7.3.0",
+    "react-router-scroll-memory": "^1.0.1",
+    "react-scripts": "1.0.17",
+    "react-select": "^1.0.0",
+    "react-svg-inline": "^2.0.1",
+    "react-timeago": "^3.4.3",
+    "recompose": "^0.26.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "redux-logger": "^3.0.6",
+    "reselect": "^3.0.1",
+    "shortid": "^2.2.8",
+    "updeep": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-css-modules-transform": "^1.4.0",
     "nodemon": "^1.14.8",
     "rimraf": "^2.6.2"
   }
