--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,9 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "shortid": "^2.2.8",
-    "updeep": "^1.0.0"
+    "updeep": "^1.0.0",
+    "es6-promise": "^4.2.2",
+    "isomorphic-fetch": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
