--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -52,6 +52,7 @@ server {
     location ~ ^/locales/ {
         root /htdocs/;
         #expires 30d;
+        expires -1;
     }
 
     location ~ ^/favicon.ico {
