--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.5",
     "i18next-xhr-backend": "^1.5.1",
     "express": "^4.16.2",
+    "nprogress": "^0.2.0",
     "photoswipe": "^4.1.2",
     "qs": "^6.5.1",
     "react": "^16.1.1",
