--- a/nginx/etc/nginx.conf
+++ b/nginx/etc/nginx.conf
@@ -7,7 +7,7 @@ pid        /var/run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections 40000;
 }
 
 
@@ -19,6 +19,18 @@ http {
 
     upstream api {
         server webapp:8080;
+    }
+
+    upstream centrifugo {
+        # Enumerate all the Tornado servers here
+        #sticky;
+        ip_hash;
+        server centrifugo:8000;
+    }
+
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
     }
 
     include       /etc/nginx/mime.types;
@@ -42,11 +54,6 @@ http {
     proxy_read_timeout    1800;
 
     #gzip  on;
-
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        '' close;
-    }
 
     include /etc/nginx/conf.d/*.conf;
 }
