--- a/nginx/etc/conf.d/findchat.conf
+++ b/nginx/etc/conf.d/findchat.conf
@@ -30,13 +30,6 @@ server {
         proxy_pass http://api;
     }
 
-    location ~ ^/ws {
-        proxy_pass http://api;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
-
     location ~ ^/sockjs-node/ {
         proxy_pass http://react;
         proxy_http_version 1.1;
@@ -64,6 +57,53 @@ server {
     # }
 
 
+    #
+    # FOR CENTRIFUGO
+    #
+    location /centrifugo/ {
+        rewrite ^/centrifugo/(.*)        /$1 break;
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_pass http://centrifugo;
+    }
+
+    location /centrifugo/socket {
+        rewrite ^/centrifugo(.*)        $1 break;
+
+        proxy_next_upstream error;
+        proxy_buffering off;
+        keepalive_timeout 65;
+        proxy_pass http://centrifugo;
+        proxy_read_timeout 60s;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_set_header Host $http_host;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
+
+    location /centrifugo/connection {
+        rewrite ^/centrifugo(.*)        $1 break;
+
+        proxy_next_upstream error;
+        gzip on;
+        gzip_min_length 1000;
+        gzip_proxied any;
+        proxy_buffering off;
+        keepalive_timeout 65;
+        proxy_pass http://centrifugo;
+        proxy_read_timeout 60s;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_set_header Host $http_host;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
 }
 
 server {
