--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,13 +36,19 @@
     "updeep": "^1.0.0",
     "es6-promise": "^4.2.2",
     "isomorphic-fetch": "^2.2.1",
-    "centrifuge": "^1.4.8"
+    "centrifuge": "^1.4.8",
+    "npm-run-all": "^4.1.3",
+    "node-sass-chokidar": "^1.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js"
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
