--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,8 @@
     "isomorphic-fetch": "^2.2.1",
     "centrifuge": "^1.4.8",
     "npm-run-all": "^4.1.3",
-    "node-sass-chokidar": "^1.3.0"
+    "node-sass-chokidar": "^1.3.0",
+    "react-share": "^2.2.0"
   },
   "scripts": {
     "test": "react-scripts test --env=jsdom",
