--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.2"
 networks:
   findchat-dev:
     driver: bridge
+    driver_opts:
+        com.docker.network.driver.mtu: 1450
 
 services:
   #
